About section complete and test fixes to coin-summary on mobile

--- a/styles/header.css
+++ b/styles/header.css
@@ -67,8 +67,8 @@
   cursor: pointer;
   height: 40px;
   position: fixed;
-  right: 15px;
-  top: 15px;
+  right: 10px;
+  top: 10px;
   display: flex;
   flex-direction: row;
   box-shadow: var(--shadow-sm) var(--color-primary-darker);
@@ -88,12 +88,12 @@
 }
 
 .coin-amount {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  display: grid;
+  place-items: center;
   flex: 2;
   font-size: var(--font-size-h3);
   font-family: var(--font-family-accent);
   font-weight: bold;
   color: var(--color-text);
+  line-height: 1;
 }
